feat(添加性能优化的点)

--- a/Performance/性能优化.md
+++ b/Performance/性能优化.md
@@ -6,11 +6,16 @@
 
 1. 减少HTTP请求次数
 2. 使用cdn
+3. 图片的懒加载
 3. 把CSS放到顶部，把JS放到底部
 4. 减少静态资源的体积（压缩打包）
 5. 使用缓存
 6. 节流防抖函数的应用
 7. 计算算法的优化
+8. DNS预解析
+```
+<link rel="dns-prefetch" href="//hefeng.cn">
+```
 
 ## 变量的访问
 1. 访问局部变量，尽量少访问全局变量。变量在作用域链的中位置越深，访问所需的时间就越长
